samples/_failures_safe/1761152654_8b4b13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_537d05e0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_537d05e0.c:178:5: error: expected expression at end of input
  178 |     add_token(
      |     ^~~~~~~~~
./samples/SAFE/__tmp_537d05e0.c:178:5: error: too few arguments to function ‘add_token’
./samples/SAFE/__tmp_537d05e0.c:52:6: note: declared here
   52 | void add_token(Lexer *lexer, TokenType type, const char *value) {
      |      ^~~~~~~~~
./samples/SAFE/__tmp_537d05e0.c:178:5: error: expected declaration or statement at end of input
  178 |     add_token(
      |     ^~~~~~~~~
